<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="movie">Film</string>
    <string name="tv_show">Televisi</string>
    <string name="title">Judul</string>
    <string name="genre">Genre</string>
    <string name="runtime">Durasi</string>
    <string name="director">Sutradara</string>
    <string name="title_home">Halaman Awal</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="change_language_settings">Ubah Pengaturan Bahasa</string>
    <string-array name="movie_title">
        <item>Spider-Man: Far from Home</item>
        <item>Toy Story 4</item>
        <item>Shazam!</item>
        <item>Alita: Battle Angel</item>
        <item>Captain Marvel</item>
        <item>Aladdin</item>
        <item>Annabelle Comes Home</item>
        <item>Men in Black: International</item>
        <item>Godzilla: King of the Monsters</item>
        <item>The Secret Life of Pets 2</item>
        <item>Ghost Writer</item>
        <item>Parasite</item>
        <item>Single: Part 2</item>
        <item>Avengers: Endgame</item>
        <item>Dumbo</item>
    </string-array>
    <string-array name="movie_year">
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
        <item>2019</item>
    </string-array>
    <string-array name="movie_runtime">
        <item>2j 9m</item>
        <item>1j 40m</item>
        <item>2j 12m</item>
        <item>2j 2m</item>
        <item>2j 4m</item>
        <item>2j 10m</item>
        <item>1j 46m</item>
        <item>1j 55m</item>
        <item>2j 12m</item>
        <item>1j 26m</item>
        <item>1j 37m</item>
        <item>2j 12m</item>
        <item>2j 8m</item>
        <item>3j 1m</item>
        <item>1j 52m</item>
    </string-array>
    <string-array name="movie_director">
        <item>Jon Watts</item>
        <item>Josh Cooley</item>
        <item>David F. Sandberg</item>
        <item>Robert Rodriguez</item>
        <item>Anna Boden, Ryan Fleck</item>
        <item>Guy Ritchie</item>
        <item>Gary Dauberman</item>
        <item>F. Gary Gray</item>
        <item>Michael Dougherty</item>
        <item>Brian Lynch</item>
        <item>Bene Dion Rajagukguk</item>
        <item>Bong Joon-ho</item>
        <item>Raditya Dika</item>
        <item>Joe Russo, Anthony Russo</item>
        <item>Tim Burton</item>
    </string-array>
    <string-array name="movie_genre">
        <item>Action, Adventure, Science Fiction</item>
        <item>Adventure, Animation, Comedy, Family</item>
        <item>Action,Comedy, Fantasy</item>
        <item>Action, Science Fiction, Thriller, Adventure</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Adventure, Fantasy, Romance, Comedy, Family</item>
        <item>Horror</item>
        <item>Action, Comedy, Science Fiction, Adventure</item>
        <item>Science Fiction, Action</item>
        <item>Adventure, Animation, Comedy, Family</item>
        <item>Comedy, Horror, Drama</item>
        <item>Drama, Thriller</item>
        <item>Comedy, Romance</item>
        <item>Adventure, Science Fiction, Action</item>
        <item>Adventure, Family, Fantasy</item>
    </string-array>
    <string-array name="movie_sinopsis">
        <item>Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.</item>
        <item>Woody has always been confident about his place in the world and that his priority is taking care of his kid, whether thats Andy or Bonnie. But when Bonnie adds a reluctant new toy called "Forky" to her room, a road trip adventure alongside old and new friends will show Woody how big the world can be for a toy.</item>
        <item>A boy is given the ability to become an adult superhero in times of need with a single magic word.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>The story follows Carol Danvers as she becomes one of the universe’s most powerful heroes when Earth is caught in the middle of a galactic war between two alien races. Set in the 1990s, Captain Marvel is an all-new adventure from a previously unseen period in the history of the Marvel Cinematic Universe.</item>
        <item>A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.</item>
        <item>Determined to keep Annabelle from wreaking more havoc, demonologists Ed and Lorraine Warren bring the possessed doll to the locked artifacts room in their home, placing her “safely” behind sacred glass and enlisting a priest’s holy blessing. But an unholy night of horror awaits as Annabelle awakens the evil spirits in the room, who all set their sights on a new target—the Warrens ten-year-old daughter, Judy, and her friends.</item>
        <item>The Men in Black have always protected the Earth from the scum of the universe. In this new adventure, they tackle their biggest, most global threat to date: a mole in the Men in Black organization.</item>
        <item>The new story follows the heroic efforts of the crypto-zoological agency Monarch as its members face off against a battery of god-sized monsters, including the mighty Godzilla, who collides with Mothra, Rodan, and his ultimate nemesis, the three-headed King Ghidorah. When these ancient super-species—thought to be mere myths—rise again, they all vie for supremacy, leaving humanity’s very existence hanging in the balance.</item>
        <item>Max the terrier must cope with some major life changes when his owner gets married and has a baby. When the family takes a trip to the countryside, nervous Max has numerous run-ins with canine-intolerant cows, hostile foxes and a scary turkey. Luckily for Max, he soon catches a break when he meets Rooster, a gruff farm dog who tries to cure the lovable pooch of his neuroses.</item>
        <item>Naya (Tatjana Saphira), a novelist that is already famous as a writer now has become unpopular. No other best seller that she can write, until when she found a diary that holds many dark secret that belongs to Galih (Ge Pamungkas) when he was alive. Will that book make her famous again or…</item>
        <item>All unemployed, Ki-taeks family takes peculiar interest in the wealthy and glamorous Parks for their livelihood until they get entangled in an unexpected incident.</item>
        <item>Ebi has never dated even once in his whole life. Now on his 30th birthday, he is determined to find a girlfriend, but he doesnot know how to do it at all.</item>
        <item>After the devastating events of Avengers: Infinity War, the universe is in ruins due to the efforts of the Mad Titan, Thanos. With the help of remaining allies, the Avengers must assemble once more in order to undo Thanos actions and restore order to the universe once and for all, no matter what consequences may be in store.</item>
        <item>A young elephant, whose oversized ears enable him to fly, helps save a struggling circus, but when the circus plans a new venture, Dumbo and his friends discover dark secrets beneath its shiny veneer.</item>
    </string-array>
    <string-array name="movie_rating">
        <item>78</item>
        <item>78</item>
        <item>71</item>
        <item>67</item>
        <item>70</item>
        <item>71</item>
        <item>63</item>
        <item>60</item>
        <item>63</item>
        <item>64</item>
        <item>90</item>
        <item>88</item>
        <item>70</item>
        <item>84</item>
        <item>65</item>
    </string-array>
    <string-array name="movie_poster">
        <item>@drawable/film_spiderman</item>
        <item>@drawable/film_toystory</item>
        <item>@drawable/film_shazam</item>
        <item>@drawable/film_alita</item>
        <item>@drawable/film_marvel</item>
        <item>@drawable/film_aladin</item>
        <item>@drawable/film_annabelle</item>
        <item>@drawable/film_mib</item>
        <item>@drawable/film_godzilla</item>
        <item>@drawable/film_pets</item>
        <item>@drawable/film_ghost</item>
        <item>@drawable/film_parasite</item>
        <item>@drawable/film_single</item>
        <item>@drawable/film_endgame</item>
        <item>@drawable/film_dumbo</item>
    </string-array>
    <string-array name="tv_title">
        <item>Stranger Things</item>
        <item>One-Punch Man</item>
        <item>The Flash</item>
        <item>Arrow</item>
        <item>One Piece</item>
        <item>Game of Thrones</item>
        <item>Marvel Agents of S.H.I.E.L.D.</item>
        <item>Dragon Ball</item>
        <item>The Simpsons</item>
        <item>Gotham</item>
        <item>Naruto Shippūden</item>
        <item>Bleach</item>
    </string-array>
    <string-array name="tv_year">
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2012</item>
        <item>1999</item>
        <item>2011</item>
        <item>2013</item>
        <item>1986</item>
        <item>1989</item>
        <item>2014</item>
        <item>2007</item>
        <item>2004</item>
    </string-array>
    <string-array name="tv_runtime">
        <item>50m</item>
        <item>24m</item>
        <item>44m</item>
        <item>42m</item>
        <item>25m</item>
        <item>60m</item>
        <item>43m</item>
        <item>25m</item>
        <item>22m</item>
        <item>43m, 60m</item>
        <item>22m</item>
        <item>24m</item>
    </string-array>
    <string-array name="tv_director">
        <item>Ross Duffer, Matt Duffer</item>
        <item>Yuusuke Murata, ONE</item>
        <item>Geoff Johns, Andrew Kreisberg, Greg Berlanti</item>
        <item>Greg Berlanti, Marc Guggenheim, Andrew Kreisberg</item>
        <item>-</item>
        <item>David Benioff, D. B. Weiss</item>
        <item>Joss Whedon, Jed Whedon, Maurissa Tancharoen</item>
        <item>Akira Toriyama</item>
        <item>Matt Groening</item>
        <item>Bruno Heller</item>
        <item>-</item>
        <item>-</item>

    </string-array>
    <string-array name="tv_genre">
        <item>Drama, Mystery, Sci-Fi, Fantasy</item>
        <item>Action, Adventure, Animation, Comedy</item>
        <item>Drama, Sci-Fi, Fantasy</item>
        <item>Crime, Drama, Mystery, Action, Adventure</item>
        <item>Action, Adventure, Comedy, Animation</item>
        <item>Sci-Fi, Fantasy, Drama, Action, Adventure</item>
        <item>Drama, Sci-Fi, Fantasy, Action, Adventure</item>
        <item>Comedy, Sci-Fi, Fantasy, Animation, Action, Adventure</item>
        <item>Animation, Comedy</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Animation, Comedy, Drama</item>
        <item>Action, Adventure, Animation, Comedy, Sci-Fi, Fantasy</item>

    </string-array>
</resources>